--- a/robocar/Makefile
+++ b/robocar/Makefile
@@ -2,9 +2,9 @@ COMPILER  = gcc
 ARCHIVER  = ar
 CFLAGS    = -g -O2 -MMD -MP -Wall -Wextra
 ARFLAGS   = crsv
-EVDSPDIR  = ext/evdsptc
-DRVDIR    = ext/drv8830-i2c
-CVTWBDIR  = ext/civetweb
+EVDSPDIR  = ../ext/evdsptc
+DRVDIR    = ../ext/drv8830-i2c
+CVTWBDIR  = ../ext/civetweb
 LDFLAGS   = -L$(EVDSPDIR)/build -lwiringPi -lpthread -ldl -lm
 EVDSPLIB  = $(EVDSPDIR)/build/libevdsptc.a
 DRVLIB    = $(DRVDIR)/build/libdrv8830-i2c.a
