--- a/robocar/Makefile
+++ b/robocar/Makefile
@@ -5,13 +5,15 @@ ARFLAGS   = crsv
 EVDSPDIR  = ../ext/evdsptc
 DRVDIR    = ../ext/drv8830-i2c
 CVTWBDIR  = ../ext/civetweb
-LDFLAGS   = -L$(EVDSPDIR)/build -lwiringPi -lpthread -ldl -lm
+BNO055DIR = ../ext/bno055-i2c
+LDFLAGS   = -L$(EVDSPDIR)/build -L$(BNO055DIR)/build -lbno055-i2c -lwiringPi -lpthread -ldl -lm
 EVDSPLIB  = $(EVDSPDIR)/build/libevdsptc.a
 DRVLIB    = $(DRVDIR)/build/libdrv8830-i2c.a
 CVTWBLIB  = $(CVTWBDIR)/libcivetweb.a
-LIBS      = $(EVDSPLIB) $(DRVLIB) $(CVTWBLIB)
+BNO055LIB = $(BNO055DIR)/build/libbno055-i2c.a
+LIBS      = $(EVDSPLIB) $(DRVLIB) $(CVTWBLIB) $(BNO055LIB)
 SRCDIR    = ./src
-INCLUDE   = -I$(SRCDIR) -I$(EVDSPDIR)/src -I$(DRVDIR)/src -I$(CVTWBDIR)/include
+INCLUDE   = -I$(SRCDIR) -I$(EVDSPDIR)/src -I$(DRVDIR)/src -I$(CVTWBDIR)/include -I$(BNO055DIR)/src
 
 TARGET    = evrbcar
 UDPLIB    = lib$(TARGET)_udp.a
@@ -53,5 +55,10 @@ $(DRVLIB):
 $(CVTWBLIB):
 	cd $(CVTWBDIR);\
 	make lib lib WITH_WEBSOCKET=1;\
+
+$(BNO055LIB):
+	cd $(BNO055DIR)/build;\
+	cmake ..;\
+	make;\
 
 -include $(DEPENDS)
