--- a/robocar/Makefile
+++ b/robocar/Makefile
@@ -6,7 +6,7 @@ EVDSPDIR  = ../ext/evdsptc
 DRVDIR    = ../ext/drv8830-i2c
 CVTWBDIR  = ../ext/civetweb
 BNO055DIR = ../ext/bno055-i2c
-LDFLAGS   = -L$(EVDSPDIR)/build -L$(BNO055DIR)/build -lbno055-i2c -lwiringPi -lpthread -ldl -lm
+LDFLAGS   = -L$(EVDSPDIR)/build -lwiringPi -lpthread -ldl -lm
 EVDSPLIB  = $(EVDSPDIR)/build/libevdsptc.a
 DRVLIB    = $(DRVDIR)/build/libdrv8830-i2c.a
 CVTWBLIB  = $(CVTWBDIR)/libcivetweb.a
